--- a/IhalematikPro/Forms/Poz/frm_PozListesi.resx
+++ b/IhalematikPro/Forms/Poz/frm_PozListesi.resx
@@ -5495,7 +5495,7 @@ A1  Sütunu :Poz No
 B1  Sütunu: Malzeme Cinsi Açıklama
 C1  Sütunu :Birimi
 D1  Sütunu : Birim Fiyat
-şeklinde olmalı ve Başlıklar 2 satırda olmalıdır.</value>
+şeklinde olmalıdır.</value>
   </data>
   <data name="simpleButton3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
