--- a/IhalematikPro/Forms/Tedarikci/frm_TopluObfEkleTedarikci.resx
+++ b/IhalematikPro/Forms/Tedarikci/frm_TopluObfEkleTedarikci.resx
@@ -5465,6 +5465,18 @@
         CAA7
 </value>
   </data>
+  <data name="memoEdit1.EditValue" xml:space="preserve">
+    <value>"Yükle" Buttonuna tıklayarak  hazırladığınız 
+Excel dosyasını hızlı bir şekilde yükleyebilirsiniz.
+Excel Dosyanız aşağıdaki sutünlardan oluşmalıdır
+
+
+A1  Sütunu :ÖBF No
+B1  Sütunu: Malzeme Cinsi Açıklama
+C1  Sütunu :Birimi
+D1  Sütunu : Miktarı
+şeklinde olmalıdır.</value>
+  </data>
   <data name="picture1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         R0lGODlhIANYAvcAAKa2vkuuT2mEkuvw8WSBjqu6w+vw7tvh5M7W2uHm6+3w9Ort7nqRnM7Z24Wapevv
